--- a/src/index.css
+++ b/src/index.css
@@ -43,7 +43,7 @@ button {
   border-radius: 5px;
 }
 
-/* button:disabled {
+button:disabled {
   background-color: rgba(2, 100, 100, 0.474);
   cursor: not-allowed;
-} */
+}
